# sidecheck

./: Cargo.toml  README.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
realistic-fixtures/: README.md
realistic-fixtures/go-nethttp/: main.go
realistic-fixtures/node-http/: server.js
sidecheck-cli/: Cargo.toml
sidecheck-cli/src/: main.rs
sidecheck-core/: Cargo.toml  LICENSE  README.md
sidecheck-core/src/: doctor.rs  export.rs  lib.rs  report.rs  sampler.rs  stats.rs
test-fixture/: test_fixture.py
