[workspace]
resolver = "2"
members = ["sidecheck-core", "sidecheck-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/casablanque-code/sidecheck"
description = "Remote timing side-channel auditor for your own HTTP services"
keywords = ["security", "timing-attack", "side-channel", "audit"]
categories = ["command-line-utilities", "cryptography"]

[profile.release]
lto = true
codegen-units = 1
