[package]
name = "sidecheck-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[features]
default = ["http"]
http = ["dep:reqwest"]
